--- a/src/css/Features.css
+++ b/src/css/Features.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
+
 .features {
     width: calc(100% - 7px);
     background-color: white;
@@ -15,6 +17,7 @@
     padding: 10px;
     margin: 0 auto;
     text-align: center;
+    font-family: "VT323", monospace;
 }
 
 .features-list {
