--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
+
 .header {
     height: 70px;
     width: auto;
@@ -26,5 +28,6 @@
 .header__title {
     margin: 0;
     padding-top: 15px;
-    margin-right: 15px;
+    margin-right: 50px;
+    font-family: "VT323", monospace;
 }
