--- a/src/css/ContactForm.css
+++ b/src/css/ContactForm.css
@@ -5,7 +5,7 @@
     padding: 16px;
     border: 1px solid black;
     border-radius: 0;
-    text-align: center;
+    text-align: justify;
     box-shadow: 5px 5px 0px 0px black;
     margin: 0 -16px 16px -16px;
 }
