--- a/src/css/Features.css
+++ b/src/css/Features.css
@@ -14,7 +14,7 @@
     color: black;
     width: auto;
     max-width: 125px;
-    padding: 10px;
+    padding-top: 10px;
     margin: 0 auto;
     text-align: center;
     font-family: "VT323", monospace;
