--- a/src/css/CommonStyles.css
+++ b/src/css/CommonStyles.css
@@ -78,9 +78,10 @@ body {
     .main {
         height: 80%;
         margin-top: -15px;
+        margin-left: 5;
     }
     .header {
-        margin: 0 15px 15px 0;
+        margin: -5px 15px 15px 0;
     }
 }
 
