--- a/src/css/CommonStyles.css
+++ b/src/css/CommonStyles.css
@@ -78,10 +78,9 @@ body {
     .main {
         height: 80%;
         margin-top: -15px;
-        margin-left: 5;
     }
     .header {
-        margin: -5px 15px 15px 0;
+        margin: 0 15px 15px 0;
     }
 }
 
