--- a/src/css/Introduction.css
+++ b/src/css/Introduction.css
@@ -2,9 +2,9 @@
     width: calc(100% - 7px);
     background-color: white;
     border: 1px solid black;
-    padding: 16px;
     border-radius: 0;
     box-shadow: 5px 5px 0px 0px black;
     margin: -4px -16px 26px -16px;
     text-align: justify;
+    padding: 16px 16px 0;
 }
