--- a/src/css/CommonStyles.css
+++ b/src/css/CommonStyles.css
@@ -5,38 +5,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 body {
-    font-family: "Montserrat", sans-serif;
-    background-color: rgba(255, 145, 0, 0.73);
-    font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  background-color: rgba(255, 145, 0, 0.73);
+  font-size: 18px;
 }
 
 .ref-buddy-page {
-    width: auto;
-    max-width: 550px;
-    min-width: 300px;
-    height: 92%;
-    min-height: 450px;
-    margin: 0 auto;
-    padding: 20px 50px 0 50px;
-    background-color: white;
-    border-radius: 0;
-    border: 3px solid black;
-    position: absolute;
-    top: calc(50% - 10px);
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 15px 15px 0px 0px black;
+  width: auto;
+  max-width: 550px;
+  min-width: 300px;
+  height: 92%;
+  min-height: 450px;
+  margin: 0 auto;
+  padding: 20px 50px 0 50px;
+  background-color: white;
+  border-radius: 0;
+  border: 3px solid black;
+  position: absolute;
+  top: calc(50% - 10px);
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 15px 15px 0px 0px black;
 }
 
 .main {
-    flex: 1;
-    padding: 16px;
-    width: auto;
-    max-width: 550px;
-    height: 78%;
-    overflow-y: scroll;
-    margin-left: 10px;
-    margin-right: 15px;
+  flex: 1;
+  padding: 16px;
+  width: auto;
+  max-width: 550px;
+  height: 78%;
+  overflow-y: scroll;
+  margin-left: 10px;
+  margin-right: 15px;
 }
 
 .component_title {
@@ -50,49 +50,62 @@ body {
   padding-bottom: 10px;
 }
 
+section {
+  margin-bottom: 2em;
+}
+
+h1,
+h2 {
+  color: #000;
+}
+
+p {
+  color: #636363;
+}
+
 @media screen and (max-height: 760px) {
-    .main {
-        height: 75%;
-    }
+  .main {
+    height: 75%;
+  }
 }
 
 @media screen and (max-height: 660px) {
-    .ref-buddy-page {
-        height: 85%;
-    }
-    .main {
-        height: 70%;
-    }
+  .ref-buddy-page {
+    height: 85%;
+  }
+  .main {
+    height: 70%;
+  }
 }
 
 @media screen and (max-height: 595px) {
-    .main {
-        height: 65%;
-    }
+  .main {
+    height: 65%;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .ref-buddy-page {
-        background-color: transparent;
-        border: none;
-        box-shadow: none;
-        padding: 10px;
-        margin: 0 10px;
-        height: 100%;
-        width: calc(100% - 20px);
-        top: 0;
-        left: 0;
-        transform: none;
-    }
-    .main {
-        height: 80%;
-        margin-top: -15px;
-    }
-    .header {
-        margin: 0 15px 15px 0;
-    }
+  .ref-buddy-page {
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    padding: 10px;
+    margin: 0 10px;
+    height: 100%;
+    width: calc(100% - 20px);
+    top: 0;
+    left: 0;
+    transform: none;
+  }
+  .main {
+    height: 80%;
+    margin-top: -15px;
+  }
+  .header {
+    margin: 0 15px 15px 0;
+  }
 }
 
 .main::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
