--- a/src/css/CommonStyles.css
+++ b/src/css/CommonStyles.css
@@ -4,13 +4,23 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
+:root {
+  --primary-color: rgba(255, 145, 0, 0.73);
+  --secondary-color: #636363;
+  --primary-font: "Montserrat", sans-serif;
+}
+
 body {
-  font-family: "Montserrat", sans-serif;
-  background-color: rgba(255, 145, 0, 0.73);
+  font-family: var(--primary-font);
+  background-color: var(--primary-color);
   font-size: 18px;
 }
 
 .ref-buddy-page {
+  position: absolute;
+  top: calc(50% - 10px);
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: auto;
   max-width: 550px;
   min-width: 300px;
@@ -21,22 +31,17 @@ body {
   background-color: white;
   border-radius: 0;
   border: 3px solid black;
-  position: absolute;
-  top: calc(50% - 10px);
-  left: 50%;
-  transform: translate(-50%, -50%);
   box-shadow: 15px 15px 0px 0px black;
 }
 
 .main {
   flex: 1;
-  padding: 16px;
   width: auto;
   max-width: 550px;
   height: 78%;
+  padding: 16px;
   overflow-y: scroll;
-  margin-left: 10px;
-  margin-right: 15px;
+  margin: 10px 15px 0 10px;
 }
 
 .component_title {
@@ -54,33 +59,34 @@ section {
   margin-bottom: 2em;
 }
 
-h1,
-h2 {
+h1, h2 {
   color: #000;
 }
 
 p {
-  color: #636363;
+  color: var(--secondary-color);
 }
 
-@media screen and (max-height: 760px) {
+@media screen and (max-height: 760px), 
+screen and (max-height: 660px), 
+screen and (max-height: 595px) {
   .main {
     height: 75%;
   }
-}
 
-@media screen and (max-height: 660px) {
-  .ref-buddy-page {
-    height: 85%;
+  @media (max-height: 660px) {
+    .ref-buddy-page {
+      height: 85%;
+    }
+    .main {
+      height: 70%;
+    }
   }
-  .main {
-    height: 70%;
-  }
-}
 
-@media screen and (max-height: 595px) {
-  .main {
-    height: 65%;
+  @media (max-height: 595px) {
+    .main {
+      height: 65%;
+    }
   }
 }
 
@@ -97,10 +103,12 @@ p {
     left: 0;
     transform: none;
   }
+
   .main {
     height: 80%;
     margin-top: -15px;
   }
+
   .header {
     margin: 0 15px 15px 0;
   }
