--- a/src/css/CommonStyles.css
+++ b/src/css/CommonStyles.css
@@ -27,7 +27,7 @@ body {
   height: 92%;
   min-height: 450px;
   margin: 0 auto;
-  padding: 20px 50px 0 50px;
+  padding: 20px 33px 0 30px;
   background-color: white;
   border-radius: 0;
   border: 3px solid black;
@@ -41,7 +41,7 @@ body {
   height: 78%;
   padding: 16px;
   overflow-y: scroll;
-  margin: 10px 15px 0 10px;
+  margin: 10px 0 0 10px;
 }
 
 .component_title {
