--- a/src/css/CommonStyles.css
+++ b/src/css/CommonStyles.css
@@ -98,11 +98,11 @@ screen and (max-height: 595px) {
     padding: 10px;
     margin: 0 10px;
     height: 100%;
-    width: calc(100% - 10px); /* Change this value to make the highlighted code wider */
+    width: calc(100% - 10px);
     top: 0;
     left: 0;
     transform: none;
-    margin-left: -10px; /* Change this value to move the highlighted code to the left */
+    margin-left: -10px;
   }
 
   .main {
@@ -111,8 +111,9 @@ screen and (max-height: 595px) {
   }
 
   .header {
-    margin: 5px 15px 5px 0;
-  }
+  margin: 5px 0 5px 15px; /* Change this value to make the header shorter on the left and longer on the right */
+  padding-bottom: 10px; /* Change this value to add empty space on the bottom */
+}
 }
 
 .main::-webkit-scrollbar {
