--- a/src/css/CommonStyles.css
+++ b/src/css/CommonStyles.css
@@ -95,14 +95,13 @@ screen and (max-height: 595px) {
     background-color: transparent;
     border: none;
     box-shadow: none;
-    padding: 10px;
+    padding: 10px 33px 0 30px;
     margin: 0 10px;
     height: 100%;
     width: calc(100% - 10px);
     top: 0;
     left: 0;
     transform: none;
-    margin-left: -10px;
   }
 
   .main {
